[gd_scene load_steps=2 format=3 uid="uid://b2nusha1r258u"]

[ext_resource type="Script" path="res://Scenes/Scripts/main.gd" id="1_ppmuo"]

[node name="Main" type="Node"]
script = ExtResource("1_ppmuo")

[node name="MainMenuInterface" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 595.0
offset_top = 314.0
offset_right = -595.0
offset_bottom = -314.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenuInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuInterface/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MainLabel" type="Label" parent="MainMenuInterface/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "Меню"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameButton" type="Button" parent="MainMenuInterface/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Игра"

[node name="SettingsButton" type="Button" parent="MainMenuInterface/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Настройки"

[node name="ExitButton" type="Button" parent="MainMenuInterface/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Выход"

[node name="GameMenuInterface" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChooseMenu" type="Control" parent="GameMenuInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameMenuInterface/ChooseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -432.5
offset_top = -177.0
offset_right = 432.5
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenuInterface/ChooseMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CreateGameLobbyButton" type="Button" parent="GameMenuInterface/ChooseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Создать лобби"

[node name="JoinGameLobbyButton" type="Button" parent="GameMenuInterface/ChooseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Присоединиться к лобби"

[node name="BackToMenuButton" type="Button" parent="GameMenuInterface/ChooseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Назад"

[node name="JoinMenu" type="Control" parent="GameMenuInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameMenuInterface/JoinMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenuInterface/JoinMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="IPAdressLineEdit" type="LineEdit" parent="GameMenuInterface/JoinMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
placeholder_text = "IP"
alignment = 1

[node name="PortLineEdit" type="LineEdit" parent="GameMenuInterface/JoinMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
placeholder_text = "Port"
alignment = 1

[node name="JoinButton" type="Button" parent="GameMenuInterface/JoinMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Подключиться"

[node name="SettingsMenuInterface" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenuInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -433.0
offset_top = -177.0
offset_right = 433.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenuInterface/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="NicknameLineEdit" type="LineEdit" parent="SettingsMenuInterface/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
placeholder_text = "Player"
alignment = 1

[node name="AcceptButton" type="Button" parent="SettingsMenuInterface/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Изменить"

[node name="BackButton" type="Button" parent="SettingsMenuInterface/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Назад"

[node name="LobbyMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LobbyMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 526.0
offset_top = 262.0
offset_right = -526.0
offset_bottom = -262.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="IpLabel" type="Label" parent="LobbyMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "IP: 127.0.0.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PortLabel" type="Label" parent="LobbyMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostLabel" type="Label" parent="LobbyMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.780694, 4.54836e-06, 4.81307e-07, 1)
theme_override_font_sizes/font_size = 65
horizontal_alignment = 1
vertical_alignment = 1

[node name="JoinerLabel" type="Label" parent="LobbyMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.780392, 0, 0, 1)
theme_override_font_sizes/font_size = 65
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyButton" type="Button" parent="LobbyMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Готов"

[node name="BackButton" type="Button" parent="LobbyMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Выйти"

[connection signal="pressed" from="MainMenuInterface/MarginContainer/VBoxContainer/GameButton" to="." method="_on_game_button_pressed"]
[connection signal="pressed" from="MainMenuInterface/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMenuInterface/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="GameMenuInterface/ChooseMenu/MarginContainer/VBoxContainer/CreateGameLobbyButton" to="." method="_on_create_game_lobby_button_pressed"]
[connection signal="pressed" from="GameMenuInterface/ChooseMenu/MarginContainer/VBoxContainer/JoinGameLobbyButton" to="." method="_on_join_game_lobby_button_pressed"]
[connection signal="pressed" from="GameMenuInterface/ChooseMenu/MarginContainer/VBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="GameMenuInterface/JoinMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="SettingsMenuInterface/MarginContainer/VBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="SettingsMenuInterface/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
